--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -21,22 +21,23 @@ footer {
       margin-bottom: 0;
     }
     @include bp(desktop) {
-      left: 10rem;
+      left: 12.5rem;
     }
   }
   .soshmeeds {
     display: block;
     @include bp(tablet) {
       position: absolute;
-      right: 4rem;
+      right: 20%;
       top: 50%;
       transform: translateY(-50%);
       text-align: right;
     }
     @include bp(desktop) {
-      right: 10rem;
+      right: 20rem;
     }
     .sosh-link {
+      font-style: italic;
       font-size: 12px;
       color: $m-grey;
       font-weight: lighter;
@@ -62,6 +63,10 @@ footer {
       left: 4rem;
       top: 60%;
     }
+    @include bp(desktop) {
+      left: 10rem;
+      top: 60%;
+    }
   }
   .footer-nav {
     padding-bottom: 1rem;
@@ -82,9 +87,12 @@ footer {
       padding: 0;
       text-align: right;
       position: absolute;
-      right: 20%;
+      right: 4rem;
       top: 50%;
       transform: translateY(-50%);
+    }
+    @include bp(desktop) {
+      right: 10rem;
     }
   }
 }
