image size fix, placeholder images for team

--- a/_includes/home-connect.html
+++ b/_includes/home-connect.html
@@ -7,6 +7,6 @@
       <a class="button-light" href="{{site.baseurl}}/contact">Get connected</a>
   </div>
   <div class="hero-img">
-    <img class="img-oversize" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1491331555/Asset_2_q9frur.png" alt="The network we are building stretches from coast to coast. This map illustrates our connectivity.">
+    <img src="{{site.baseurl}}/svgs/map.svg" alt="The network we are building stretches from coast to coast. This map illustrates our connectivity.">
   </div>
 </section>
