--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -41,29 +41,15 @@
   width: 100%;
 }
 
-.img-oversize {
-  width: 320%;
-  transform: translateX(-34%);
-  z-index: 1;
-  @include bp(tablet) {
-    width: 200%;
-    transform: translateX(-20%);
-  }
-  @include bp(desktop) {
-    width: 100%;
-    transform: translateX(0%);
-  }
-}
-
 .hero-img {
   height: 300px;
+  background-color: #4b4e53;
+  @include bp(tablet) {
+    height: 500px;
+  }
   img {
-    height: 100%;
+    height: 500px;
     @include bp(phone) {
-      width: 130%;
-      height: auto;
-    }
-    @include bp(tablet) {
       width: 100%;
     }
   }
