--- a/css/style.scss
+++ b/css/style.scss
@@ -211,6 +211,7 @@ html {
       width: 100%;
     }
     @include bp(desktop) {
+      padding: 0 3rem 3rem 3rem;
       width: 100%;
     }
   }
@@ -229,6 +230,7 @@ html {
       width: 100%;
     }
     @include bp(desktop) {
+      padding: 0 3rem 3rem 3rem;
       width: 100%;
     }
   }
