replace placeholder gif

--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -67,3 +67,19 @@
     transform: translateX(0);
   }
 }
+
+.gif-one {
+  display: none;
+}
+
+.gif-two {
+  display: none;
+}
+
+.gif-three {
+  display: none;
+}
+
+.gif-four {
+  display: none;
+}
