--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -16,7 +16,7 @@ footer {
     @include bp(tablet) {
       position: absolute;
       left: 4rem;
-      top: 2.7rem;
+      top: 50%;
       transform: translateY(-50%);
       margin-bottom: 0;
     }
@@ -61,7 +61,8 @@ footer {
       padding-bottom: 0;
       position: absolute;
       right: 4rem;
-      top: 1.9rem;
+      top: 50%;
+      transform: translateY(-50%);
     }
     @include bp(desktop) {
       right: 10rem;
