--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -114,19 +114,18 @@ $weiss: 'weissenhof_grotesk', sans-serif;
 }
 
 .banner-header {
-  color: $green;
+  color: $navy;
   font-size: 32px;
   margin-bottom: 1rem;
   font-weight: lighter;
   text-transform: uppercase;
   @include bp(tablet) {
     font-size: 36px;
-    color: $navy;
   }
 }
 .banner-sub {
   font-weight: lighter;
-  color: #fff;
+  color: $navy;
   line-height: 1.4;
   margin-bottom: 2rem;
   @include bp(phone) {
@@ -134,25 +133,22 @@ $weiss: 'weissenhof_grotesk', sans-serif;
   }
   @include bp(tablet) {
     margin-bottom: 0;
-    color: $navy;
   }
 }
 
 .banner-text-right {
   height: 100%;
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-0%,-50%);
   width: 100%;
   z-index: 100000;
-  padding: 30% 1rem;
-  background-color: rgba(35, 31, 32, 0.6);
+  padding: 0 1rem;
   @include bp(phone) {
-    padding: 40% 2rem;
+    padding: 0 2rem;
   }
   @include bp(tablet) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
     height: auto;
     padding: 4rem 4rem;
     width: 70%;
@@ -171,18 +167,16 @@ $weiss: 'weissenhof_grotesk', sans-serif;
 .banner-text-left {
   height: 100%;
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
   width: 100%;
   z-index: 100000;
-  padding:  30% 1rem;
-  background-color: rgba(35, 31, 32, 0.6);
+  padding:  0 1rem;
   @include bp(phone) {
-    padding: 40% 2rem;
+    padding: 0 2rem;
   }
   @include bp(tablet) {
+    top: 50%;
+    left: 50%;
+    position: absolute;
     height: auto;
     padding: 4rem 4rem;
     width: 70%;
