--- a/css/style.scss
+++ b/css/style.scss
@@ -199,6 +199,7 @@ html {
 }
 
 .about-grid {
+  @include wrapper;
   clear: both;
 }
 
@@ -207,9 +208,10 @@ html {
     width: 100%;
     @include bp(tablet) {
       width: 100%;
+      padding: 1rem 0 0 0;
     }
     @include bp(desktop) {
-      padding: 0 3rem 3rem 3rem;
+      padding: 0 0 5rem 5rem;
       width: 100%;
     }
   }
@@ -226,9 +228,10 @@ html {
     width: 100%;
     @include bp(tablet) {
       width: 100%;
+      padding: 1rem 0 0 0;
     }
     @include bp(desktop) {
-      padding: 0 3rem 3rem 3rem;
+      padding: 0 5rem 5rem 0;
       width: 100%;
     }
   }
