center text, footer logo resize, remove team images

--- a/_includes/home-about.html
+++ b/_includes/home-about.html
@@ -1,6 +1,6 @@
 <section id="home-about" class="text-section">
   <div class="para-box">
-    <h2 class="para-header">
+    <h2 class="para-header-alt">
       A fresh business model, which provides greater value, autonomy and flexibility.
     </h2>
     <div class="para-body">
