--- a/_includes/home-team.html
+++ b/_includes/home-team.html
@@ -3,11 +3,11 @@
     <h2 class="para-header-alt">
       Our success is derived from the sum of our parts.
     </h2>
-    <div class="para-body-alt">
+    <div class="para-body">
       <p class="pad-b">
         Our management team is comprised of industry ﬁrst-movers, visionaries and experts, dedicated to creating value for our streaming partners and the cannabis industry.
       </p>
-      <div class="text-left">
+      <div class="text-center">
         <a class="button-dark text-center" href="{{site.baseurl}}/team">Meet the team</a>
       </div>
     </div>
