--- a/css/style.scss
+++ b/css/style.scss
@@ -186,11 +186,11 @@ html {
 .wheaton-benefit {
   .hero {
     position: relative;
-    height: 200px;
+    height: 300px;
     .video-dots {
       position: absolute;
       width: 100%;
-      height: 200px;
+      height: 300px;
       background-image: url({{site.baseurl}}/img/black-medium-checks.png);
       background-repeat: repeat;
     }
@@ -198,47 +198,94 @@ html {
 }
 
 .about-grid {
+//  background-image: url({{site.baseurl}}/img/gbg.png);
+//  background-size: contain;
   @include wrapper;
   clear: both;
+  padding: 2rem 0;
+  @include bp(tablet) {
+    padding: 4rem 4rem;
+  }
 }
 
 .banner-img-left {
+  height: 220px;
   img {
-    width: 100%;
+    width: 220px;
+    margin: 0 auto;
     @include bp(tablet) {
-      width: 100%;
+      width: 250px;
       padding: 1rem 0 0 0;
+      margin: 0 auto;
     }
     @include bp(desktop) {
-      padding: 0 0 5rem 5rem;
-      width: 100%;
+      padding: 0 0 2rem 2rem;
+      width: 300px;
     }
   }
   @include bp(tablet) {
-    width: 35%;
+    transform: translateY(20%);
+    height: auto;
+    width: 45%;
+    margin-right: 5%;
     float: left;
     z-index: 1;
     overflow: hidden;
   }
+  @include bp(desktop) {
+    width: 35%;
+    margin-left: 5rem;
+  }
 }
 
 .banner-img-right {
+  height: 220px;
   img {
-    width: 100%;
+    width: 220px;
+    margin: 0 auto;
     @include bp(tablet) {
-      width: 100%;
+      width: 250px;
       padding: 1rem 0 0 0;
+      margin: 0 auto;
     }
     @include bp(desktop) {
-      padding: 0 5rem 5rem 0;
+      padding: 0 2rem 2rem 0;
+      width: 300px;
+    }
+  }
+  @include bp(tablet) {
+    transform: translateY(20%);
+    height: auto;
+    width: 45%;
+    margin-left: 5%;
+    float: right;
+    z-index: 1;
+    overflow: hidden;
+  }
+  @include bp(desktop) {
+    width: 35%;
+    margin-right: 5rem;
+  }
+}
+
+.banner-img-center {
+  height: 200px;
+  img {
+    height: 100%;
+    margin: 0 auto;
+    @include bp(tablet) {
+      width: 100%;
+      margin: 0;
+    }
+    @include bp(desktop) {
       width: 100%;
     }
   }
   @include bp(tablet) {
-    width: 35%;
-    float: right;
+    width: 20%;
     z-index: 1;
-    overflow: hidden;
+    margin: 0 auto;
+    height: auto;
   }
 }
 
@@ -253,7 +300,7 @@ html {
 }
 
 .team-profiles {
-  margin-bottom: 2rem;
+  margin-bottom: 0;
   opacity: 0;
   transition: .7s all ease-in;
   padding: 2rem;
@@ -270,7 +317,7 @@ html {
 }
 .team-member {
   font-size: 1rem;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
   display: inline-block;
 
   .team-photo {
@@ -355,18 +402,18 @@ html {
         height: 40px;
         padding: 0;
         border: none;
-        border-top: 1px solid #fff;
+        border-bottom: 1px solid #fff;
         background-color: transparent;
         font-family: $weiss;
         color: #fff;
         font-size: 16px;
         &:focus {
-          border-top: 1px solid $green;
+          border-bottom: 1px solid $green;
         }
         @include bp(tablet) {
           width: calc(50% - 2rem);
           float: left;
-          height: 80px;
+          height: 100px;
           margin-right: 2rem;
         }
       }
@@ -378,17 +425,17 @@ html {
       textarea {
         width: 100%;
         height: 100px;
-        padding: 15px;
+        padding: 15px 0 0 0;
         border: none;
         outline: none;
-        border-top: 1px solid #fff;
+        border-bottom: 1px solid #fff;
         background-color: transparent;
         font-family: $weiss;
         color: #fff;
         font-size: 16px;
         margin-bottom: 2rem;
         &:focus {
-          border-top: 1px solid $green;
+          border-bottom: 1px solid $green;
         }
         @include bp(tablet) {
           width: 50%;
