New content input

--- a/_includes/home-team.html
+++ b/_includes/home-team.html
@@ -5,7 +5,7 @@
     </h2>
     <div class="para-body">
       <p class="pad-b">
-        Our management team is comprised of industry ﬁrst-movers, visionaries and experts, dedicated to creating value for our streaming partners and the cannabis industry.
+        Our management team is comprised of industry ﬁrst-movers, visionaries and thought leaders, dedicated to creating value for our partners and the cannabis industry.<br><br>Collectively, the individuals of Cannabis Wheaton have a depth of knowledge from retail, branding, finance and technology.
       </p>
       <div class="text-center">
         <a class="button-dark text-center" href="{{site.baseurl}}/team">Meet the team</a>
