--- a/_includes/bg-video.html
+++ b/_includes/bg-video.html
@@ -1,7 +1,7 @@
 <section class="bg-video clearfix">
   <div class="video-text-overlay text-center">
-    <h1 class="hero-header way">A true catalyst for change</h1>
-    <h2 class="hero-sub">By shifting the traditional investment paridigm and bringing together the leading team in the space, Cannabis Wheaton is redefining the cannabis industry.
+    <h1 class="hero-header way">A catalyst for change</h1>
+    <h2 class="hero-sub">Cannabis Wheaton is fundamentally shifting two paradigms in the Cannabis space – The traditional investment model and how the industry works together. Our platform creates wider channels of opportunities for both investors and cannabis cultivators.<br><br>Our foundation is built upon a market-tested model and applied with a fresh approach by leading experts in the cannabis industry.
     </h2>
   </div>
 
