--- a/_includes/home-connect.html
+++ b/_includes/home-connect.html
@@ -2,7 +2,7 @@
   <div class="hero-text text-center">
       <h1 class="hero-header">Coast-to-coast network</h1>
       <h2 class="hero-sub">
-        We are building a pan-Canadian network of streaming partners that will define the future of the industry.
+        We are building a pan-Canadian network of streaming partners that will define the future of the industry.<br><br>Cannabis Wheaton is laying the groundwork and facilitating the connections between licensed producers, consumers and investors across the country.
       </h2>
       <a class="button-light" href="{{site.baseurl}}/contact">Get connected</a>
   </div>
