--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -47,9 +47,12 @@
     height: 500px;
   }
   img {
-    height: 500px;
+    height: 300px;
     @include bp(phone) {
       width: 100%;
+    }
+    @include bp(tablet) {
+      height: 500px;
     }
   }
 }
