--- a/_includes/home-about.html
+++ b/_includes/home-about.html
@@ -1,7 +1,7 @@
 <section id="home-about" class="text-section">
   <div class="para-box">
     <h2 class="para-header-alt">
-      Value, autonomy and flexity
+      Value, autonomy and flexibility
     </h2>
     <div class="para-body">
       <p class="pad-b">
