--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,24 +1,26 @@
 footer {
   text-align: center;
-  background-color: $m-navy;
+  background-color: $navy;
   padding: 1.5rem 1rem;
+  position: relative;
+  height: 170px;
   @include bp(tablet) {
     padding: 0;
-    position: relative;
-    height: 120px;
+    height: 80px;
   }
   .w-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 1.5rem;
     svg {
       width: 55px;
-      margin: 2rem 0;
       @include bp(tablet) {
         margin: 0;
       }
     }
     @include bp(tablet) {
-      position: absolute;
-      left: 4rem;
-      top: 2rem;
+      top: 1.2rem;
       margin-bottom: 0;
     }
     @include bp(desktop) {
@@ -26,73 +28,72 @@ footer {
     }
   }
   .soshmeeds {
-    display: block;
+    position: absolute;
+    bottom: 1.5rem;
+    left: 50%;
+    width: 100%;
+    transform: translateX(-50%);
     @include bp(tablet) {
-      position: absolute;
-      right: 20rem;
-      top: 50%;
-      transform: translateY(-50%);
-      text-align: right;
+      left: 75%;
+      bottom: 2rem;
+      width: 50%;
     }
     @include bp(desktop) {
-      right: 28rem;
     }
     .sosh-link {
       font-style: italic;
       text-decoration: none;
       font-size: 12px;
-      color: #fff;
+      color: $m-grey;
       font-weight: lighter;
-      display: inline-block;
-      margin: 0 15px;
+      padding: 0 1.5rem;
       &:hover {
         color: #fff;
       }
       @include bp(tablet) {
-        display: block;
-        padding-bottom: .5rem;
+
       }
     }
   }
   .footer-copyright {
-    font-size: 10px;
+    font-size: 8px;
     font-weight: lighter;
-    color: #fff;
-    padding-bottom: 1rem;
+    color: $m-grey;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 4rem;
     @include bp(tablet) {
       padding-bottom: 0;
-      position: absolute;
-      right: 4rem;
-      top: 2rem;
+      top: 3.5rem;
     }
     @include bp(desktop) {
-      right: 10rem;
     }
   }
   .footer-nav {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 3.3rem;
+    width: 100%;
     .footer-link {
       font-size: 12px;
-      padding: 0 1rem;
+      padding: 0 1.5rem;
       text-decoration: none;
-      color: #fff;
+      color: $m-grey;
       &:hover {
         color: #fff;
       }
       @include bp(tablet) {
-        display: block;
-        padding-bottom: .5rem;
+
       }
     }
     @include bp(tablet) {
-      padding: 0;
-      text-align: right;
-      position: absolute;
-      right: 14rem;
-      top: 50%;
-      transform: translateY(-50%);
+    left: 25%;
+    bottom: 2rem;
     }
     @include bp(desktop) {
-      right: 21rem;
+
     }
   }
 }
