title case headlines

--- a/_includes/home-connect.html
+++ b/_includes/home-connect.html
@@ -1,6 +1,6 @@
 <section class="connect-hero">
   <div class="hero-text text-center">
-      <h1 class="hero-header">Coast-to-coast network</h1>
+      <h1 class="hero-header">Coast-to-Coast Network</h1>
       <h2 class="hero-sub">
         We are building a pan-Canadian network of streaming partners that will define the future of the industry. Cannabis Wheaton is laying the groundwork and facilitating the connections between licensed producers, consumers and investors across the country.
       </h2>
