more page builds, new button style

--- a/_includes/home-about.html
+++ b/_includes/home-about.html
@@ -7,9 +7,12 @@
       <p class="pad-b">
         At Cannabis Wheaton, we are focused on creating value for our partners. We have created a platform that promotes new opportunities for success while licensed producers maintain their brand autonomy and gaining access to better scaling flexibility.<br><br>We invest and support a wide range of cannabis cultivation companies each of which have different visions, voices and brand values;  however they all share a common goal — create a world class industry based on diversity, quality and innovation.
       </p>
-      <div class="text-center">
-        <a class="button-dark text-center" href="{{site.baseurl}}/about">Learn More</a>
-      </div>
+      <a href="{{site.baseurl}}/about" class="svg-wrapper-one">
+        <svg height="40" width="130" xmlns="http://www.w3.org/2000/svg">
+          <rect class="button-shape" height="40" width="130" />
+        </svg>
+        <div class="button-text">Learn More</div>
+      </a>
     </div>
   </div>
 </section>
