--- a/_includes/home-connect.html
+++ b/_includes/home-connect.html
@@ -4,9 +4,14 @@
       <h2 class="hero-sub">
         We are building a pan-Canadian network of streaming partners that will define the future of the industry. Cannabis Wheaton is laying the groundwork and facilitating the connections between licensed producers, consumers and investors across the country.
       </h2>
-      <a class="button-light" href="{{site.baseurl}}/contact">Get connected</a>
+      <a href="{{site.baseurl}}/contact" class="svg-wrapper-two">
+        <svg height="40" width="130" xmlns="http://www.w3.org/2000/svg">
+          <rect class="button-shape" height="40" width="130" />
+        </svg>
+        <div class="button-text">Get Connected</div>
+      </a>
   </div>
   <div class="hero-img">
-    <img src="{{site.baseurl}}/svgs/map.svg" alt="The network we are building stretches from coast to coast. This map illustrates our connectivity.">
+    <img class="map-graphic" src="{{site.baseurl}}/svgs/map.svg" alt="The network we are building stretches from coast to coast. This map illustrates our connectivity.">
   </div>
 </section>
