--- a/_includes/home-team.html
+++ b/_includes/home-team.html
@@ -7,9 +7,12 @@
       <p class="pad-b">
         Our management team is comprised of industry ﬁrst-movers, visionaries and thought leaders, dedicated to creating value for our partners and the cannabis industry. Collectively, the individuals of Cannabis Wheaton have a depth of knowledge from retail, branding, finance and technology.
       </p>
-      <div class="text-center">
-        <a class="button-dark text-center" href="{{site.baseurl}}/team">Meet the team</a>
-      </div>
+      <a href="{{site.baseurl}}/team" class="svg-wrapper-one">
+        <svg height="40" width="130" xmlns="http://www.w3.org/2000/svg">
+          <rect class="button-shape" height="40" width="130" />
+        </svg>
+        <div class="button-text">Meet the Team</div>
+      </a>
     </div>
   </div>
 </section>
