--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -35,3 +35,8 @@
     @media only screen and (min-width: 400px)  { @content; }
   }
 }
+
+@mixin fade-in {
+  opacity: 0;
+  transition: all .7s ease-in;
+}
