--- a/css/style.scss
+++ b/css/style.scss
@@ -215,34 +215,22 @@ html {
   }
 }
 
-.wheaton-benefit {
-  .hero {
-    position: relative;
-    height: 300px;
-    .video-dots {
-      position: absolute;
-      width: 100%;
-      height: 300px;
-      background-image: url({{site.baseurl}}/img/black-medium-checks.png);
-      background-repeat: repeat;
-    }
-  }
-}
-
 .about-grid {
   @include wrapper;
   clear: both;
   padding: 2rem 0;
   @include bp(tablet) {
-    padding: 0 4rem;
+    padding: 4rem 4rem 0 4rem;
   }
   .about-grid-header {
+    padding: 0 1rem;
     font-size: 36px;
     text-align: center;
     color: $green;
     line-height: 1.1;
     @include bp(tablet) {
       font-size: 48px;
+      padding: 0 2rem;
     }
   }
 }
