new poster for bg vids

--- a/css/style.scss
+++ b/css/style.scss
@@ -288,7 +288,7 @@ html {
     padding: 4rem 4rem 0 4rem;
   }
   .about-grid-header {
-    padding: 0 1rem;
+    padding: 2rem 1rem;
     font-size: 36px;
     text-align: center;
     color: $green;
