--- a/css/style.scss
+++ b/css/style.scss
@@ -391,6 +391,19 @@ html {
  font-size: 80%;
 }
 
+.team-header {
+  padding: 2rem 1rem 0 1rem;
+  font-size: 36px;
+  text-align: center;
+  color: $green;
+  line-height: 1.1;
+  margin-top: 2rem;
+  @include bp(tablet) {
+    font-size: 48px;
+    padding: 0 2rem;
+  }
+}
+
 .team-profiles {
   margin-bottom: 0;
   padding: 2rem;
@@ -532,30 +545,14 @@ html {
           position: absolute;
           top: 0;
           right: 0;
-          padding-top: 32px;
+          padding-top: 46px;
         }
       }
-      button {
-        background-color: transparent;
-        border: 1px solid #fff;
-        outline: none;
-        color: #fff;
-        font-family: $weiss;
-        text-transform: uppercase;
-        font-size: 12px;
-        cursor: pointer;
-        padding: 1rem;
-        display: block;
-        width: 150px;
-        transition: .2s all ease-in;
-        &:hover {
-          color: $navy;
-          background-color: #fff;
-        }
+      .submit-btn {
         @include bp(tablet) {
+          top: 120%;
+          left: 49%;
           position: absolute;
-          bottom: -4rem;
-          left: 50%;
           transform: translateX(-50%);
         }
       }
