--- a/_includes/home-team.html
+++ b/_includes/home-team.html
@@ -1,7 +1,7 @@
 <section id="home-team" class="text-section">
   <div class="para-box">
     <h2 class="para-header-alt">
-      Our Success is Derived from the Sum of our Parts.
+      A Foundation of Strategy and Execution
     </h2>
     <div class="para-body">
       <p class="pad-b">
