--- a/css/style.scss
+++ b/css/style.scss
@@ -70,6 +70,21 @@ html {
 }
 
 //hero banner
+
+//hide play button ios
+*::-webkit-media-controls-panel {
+  display: none!important;
+  -webkit-appearance: none;
+}
+*::--webkit-media-controls-play-button {
+  display: none!important;
+  -webkit-appearance: none;
+}
+*::-webkit-media-controls-start-playback-button {
+  display: none!important;
+  -webkit-appearance: none;
+}
+
 .bg-video {
   height: 100vh;
 	position: relative;
