--- a/css/style.scss
+++ b/css/style.scss
@@ -516,16 +516,16 @@ html {
         display: block;
         outline: none;
         margin-bottom: 1rem;
+        padding: 0 0 0 1rem;
         height: 40px;
-        padding: 0;
         border: none;
-        border-bottom: 1px solid #fff;
+        border: 1px solid #fff;
         background-color: transparent;
         font-family: $weiss;
         color: #fff;
         font-size: 16px;
         &:focus {
-          border-bottom: 1px solid $green;
+          border: 1px solid $green;
         }
         @include bp(tablet) {
           width: calc(50% - 2rem);
@@ -542,17 +542,17 @@ html {
       textarea {
         width: 100%;
         height: 100px;
-        padding: 15px 0 0 0;
+        padding: 15px 0 0 1rem;
         border: none;
         outline: none;
-        border-bottom: 1px solid #fff;
+        border: 1px solid #fff;
         background-color: transparent;
         font-family: $weiss;
         color: #fff;
         font-size: 16px;
         margin-bottom: 2rem;
         &:focus {
-          border-bottom: 1px solid $green;
+          border: 1px solid $green;
         }
         @include bp(tablet) {
           width: 50%;
