--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,8 +17,8 @@
     <p class="copyright">© 2017 Cannabis Wheaton</p>
   </div>
   <div class="soshmeeds">
-    <a class="sosh-link" href="#">Facebook</a>
-    <a class="sosh-link" href="#">Twitter</a>
-    <a class="sosh-link" href="#">LinkedIn</a>
+    <a class="sosh-link" href="https://facebook.com/canwheaton">Facebook</a>
+    <a class="sosh-link" href="https://twitter.com/cannabiswheaton">Twitter</a>
+    <a class="sosh-link" href="https://linkedin.com/company-beta/18043832">LinkedIn</a>
   </div>
 </footer>
