new advisor team members

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,7 @@
 @import "reset";
 @import "elements";
 @import "footer";
+@import "stocks";
 
 @font-face {
   font-family: 'weissenhof_grotesk_light';
