--- a/css/style.scss
+++ b/css/style.scss
@@ -543,7 +543,7 @@ html {
       textarea {
         width: 100%;
         height: 100px;
-        padding: 15px 0 0 1rem;
+        padding: 15px 1rem 0 1rem;
         border: none;
         outline: none;
         border: 1px solid #fff;
