--- a/_includes/home-about.html
+++ b/_includes/home-about.html
@@ -5,7 +5,7 @@
     </h2>
     <div class="para-body">
       <p class="pad-b">
-        At Cannabis Wheaton, we are focused on creating value for our partners. We have created a platform that promotes new opportunities for success while licensed producers maintain their brand autonomy and gaining access to better scaling flexibility.<br><br>We invest and support a wide range of cannabis cultivation companies each of which have different visions, voices and brand values;  however they all share a common goal—create a world class industry based on diversity, quality and innovation.
+        At Cannabis Wheaton, we are focused on creating value for our partners. We have created a platform that promotes new opportunities for success while licensed producers maintain their brand autonomy and gain access to better scaling flexibility.<br><br>We invest and support a wide range of cannabis cultivation companies each of which have different visions, voices and brand values;  however they all share a common goal—create a world class industry based on diversity, quality and innovation.
       </p>
       <a href="{{site.baseurl}}/about" class="svg-wrapper-one">
         <svg height="40" width="130" xmlns="http://www.w3.org/2000/svg">
