--- a/css/style.scss
+++ b/css/style.scss
@@ -494,7 +494,6 @@ html {
 .contact {
   .video-text-overlay {
     form {
-      position: relative;
       margin-top: 5rem;
       ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
         color: #fff;
@@ -512,61 +511,84 @@ html {
         color: #fff;
         font-size: 12px;
       }
-      input {
-        width: 100%;
-        display: block;
-        outline: none;
-        margin-bottom: 1rem;
-        padding: 0 0 0 1rem;
-        height: 40px;
-        border: none;
-        border: 1px solid #fff;
-        background-color: transparent;
-        font-family: $weiss;
-        color: #fff;
-        font-size: 16px;
-        &:focus {
-          border: 1px solid $green;
+      .form-group.form-text {
+        @include bp(tablet) {
+          width: 100%;
+          padding-right: 2rem;
         }
+      }
+      .form-group {
+        position: relative;
+        @include clearfix;
         @include bp(tablet) {
           width: calc(50% - 2rem);
           float: left;
-          height: 100px;
-          margin-right: 2rem;
+          margin: 0 1rem;
         }
-      }
-      input:nth-child(2) {
-        @include bp(tablet) {
-          clear: both;
-        }
-      }
-      textarea {
-        width: 100%;
-        height: 100px;
-        padding: 15px 1rem 0 1rem;
-        border: none;
-        outline: none;
-        border: 1px solid #fff;
-        background-color: transparent;
-        font-family: $weiss;
-        color: #fff;
-        font-size: 16px;
-        margin-bottom: 2rem;
-        &:focus {
-          border: 1px solid $green;
-        }
-        @include bp(tablet) {
-          width: 50%;
-          height: calc(200px + 1rem);
+        label {
           position: absolute;
-          top: 0;
-          right: 0;
-          padding-top: 46px;
+          color: #fff;
+          font-size: 12px;
+          left: 1rem;
+          top: 1rem;
+        }
+        input {
+          width: 100%;
+          display: block;
+          outline: none;
+          margin-bottom: 1rem;
+          padding: 0 0 0 1rem;
+          height: 70px;
+          border: none;
+          border: 1px solid #fff;
+          background-color: transparent;
+          font-family: $weiss;
+          color: #fff;
+          font-size: 16px;
+          &:focus {
+            border: 1px solid $green;
+          }
+          &:focus + label {
+            color: $green;
+          }
+          @include bp(tablet) {
+            height: 100px;
+            margin-right: 2rem;
+          }
+        }
+        input:nth-child(2) {
+          @include bp(tablet) {
+            clear: both;
+          }
+        }
+        textarea {
+          resize: none;
+          width: 100%;
+          height: 150px;
+          padding: 2.5rem 1rem 0 1rem;
+          border: none;
+          outline: none;
+          border: 1px solid #fff;
+          background-color: transparent;
+          font-family: $weiss;
+          color: #fff;
+          font-size: 16px;
+          margin-bottom: 2rem;
+          &:focus {
+            border: 1px solid $green;
+          }
+          &:focus + label {
+            color: $green;
+          }
+          @include bp(tablet) {
+            @include clearfix;
+            height: calc(200px + 1rem);
+          }
         }
       }
       .submit-btn {
         @include bp(tablet) {
-          top: 120%;
+          top: 100%;
           left: 49%;
           position: absolute;
           transform: translateX(-50%);
