add .gitignore (ignore sass-cache) / add gemfile to repo / add stock ticker (unstyled)

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,6 +14,11 @@
     </div>
 
   </div>
+  <div class="stock-ticker">
+    <div class="symbol"></div>
+    <div class="ask"></div>
+    <div class="change"></div>
+  </div>
   <span onclick="openNav()" class="hamburger">
     <img src="{{site.baseurl}}/svgs/hamburg-g.svg" class="ham-bars">
   </span>
